# BlueToolkit_fixed_code

./: .gitignore  bluetooth_test_devices.md
BlueToolkit/: .gitignore  README.md  install.sh
BlueToolkit/bluekit/: pyproject.toml
BlueToolkit/bluekit/bluekit/: bluekit.py  checkpoint.py  constants.py  logger.py  recon.py  report.py  tests.py  verifyconn.py
BlueToolkit/bluekit/bluekit/engine/: engine.py
BlueToolkit/bluekit/bluekit/factories/: exploitfactory.py  hardwarefactory.py
BlueToolkit/bluekit/bluekit/models/: exploit.py  hardware.py
BlueToolkit/evaluation/: README.md  bluetoolkit_plots.ipynb  study_car.csv
BlueToolkit/exploits/: bleedingtooth_badkarma_cve_2020_12351.yaml  bleedingtooth_badvibes_cve_2020_24490.yaml  blueborne_CVE_2017_1000250.yaml  braktooth_au_rand_flooding.yaml  braktooth_feature_req_ping_pong.yaml  braktooth_invalid_setup_complete.yaml  braktooth_knob.yaml  braktooth_lmp_auto_rate_overflow.yaml  braktooth_lmp_overflow_dm1.yaml  braktooth_sdp_oversized_element_size.yaml  braktooth_truncated_sco_link_request.yaml  braktooth_wrong_encapsulated_payload.yaml  custom_insecure_numeric_comparison_implementation.yaml  custom_nino_check.yaml  internalblue_CVE_2018_19860_16_0b.yaml  internalblue_CVE_2018_5383_Invalid_second.yaml  internalblue_knob.yaml  reconnaissance_knob_ble.yaml
BlueToolkit/hardware/: esp32_verify.py  nexus5.yaml  nexus5_verify.py  nrf52_verify.py
BlueToolkit_updated/exploits/: bleedingtooth_badchoice_cve_2020_12352.yaml  blueborne_CVE_2017_0785.yaml  blueborne_CVE_2017_1000251.yaml  braktooth_duplicated_iocap.yaml  (+22 more)
(+59 files in other folders)
